# socp-opinion

./: .gitignore  CMakeLists.txt
app/: CMakeLists.txt  main_app.cpp  testOpinion.cpp
include/: opinion.hpp  opinion_functions.hpp  opinion_model.hpp  opinion_params.hpp
plot/: fun_opinion.py  trace_opinion.py
src/: CMakeLists.txt  opinion_functions.cpp  opinion_model.cpp  opinion_utils.cpp
standalone/: .directory  compile.sh  compile_and_execute.sh  opinion.cpp  opinion.hpp  testOpinion.cpp  trace_opinion.py  trace_opinion_full.py
tests/: CMakeLists.txt  main_tests.cpp  model_tests.hpp  utils_tests.hpp
